<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="topping">TOPPING</string>
    <string name="wipedCream">WIPED CREAM</string>
    <string name="chocolate">CHOCOLATE</string>
    <string name="quantity">QUANTITY</string>
    <string name="pricePerCup">PRICE PER CUP</string>
    <string name="order">SUMMARY ORDER</string>
    <string name="send">SEND</string>
    <string name="maxOrder">Maximal order is 100 cups!</string>
    <string name="minOrder">Minimal order is 1 cup!</string>
    <string name="withWipedCream">With wiped cream</string>
    <string name="withOutWipedCream">Without wiped cream</string>
    <string name="withChocolate">With chocolate</string>
    <string name="withOutChocolate">Without chocolate</string>
    <string name="quanyityCups">Quantity cups</string>
    <string name="total">Total</string>
    <string name="thankYou">Thank you!</string>
</resources>
